--- a/app/src/main/res/layout/activity_battle_choose.xml
+++ b/app/src/main/res/layout/activity_battle_choose.xml
@@ -5,16 +5,19 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#253BF8"
     tools:context=".BattleChooseActivity">
 
     <TextView
         android:id="@+id/txtVBattleChoose_trainerNames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="23dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-black"
         android:text="CURRENT USER VERSUS CHOSEN USER!"
         android:textAlignment="center"
+        android:textColor="#FE5151"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +26,9 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
         android:text="CURRENT USER, please choose your team."
+        android:textColor="#FDCE40"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtVBattleChoose_trainerNames" />
@@ -35,25 +40,30 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="1dp"
+        android:backgroundTint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
     <Button
-        android:id="@+id/btnVBattleChoose_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="6dp"
-        android:text="OK"
-        app:layout_constraintEnd_toEndOf="@+id/btnVBattleChoose_back"
-        app:layout_constraintTop_toBottomOf="@+id/spnVBattleChoose_teams" />
-
-    <Button
         android:id="@+id/btnVBattleChoose_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:backgroundTint="#FDCE40"
         android:text="Go Back"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/imgBtnVWelcome_battle"
+        app:layout_constraintTop_toBottomOf="@+id/imgBtnVWelcome_battle" />
+
+    <ImageButton
+        android:id="@+id/imgBtnVWelcome_battle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FDCE40"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnVBattleChoose_ok" />
+        app:layout_constraintTop_toBottomOf="@+id/spnVBattleChoose_teams"
+        app:srcCompat="@drawable/battlebutton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
