--- a/app/src/main/res/layout/activity_confirm_delete.xml
+++ b/app/src/main/res/layout/activity_confirm_delete.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#253BF7"
     tools:context=".ConfirmDeleteActivity">
 
     <ListView
@@ -13,7 +14,8 @@
         android:layout_height="0dp"
         android:layout_marginStart="6dp"
         android:layout_marginEnd="6dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnVConfirmDelete_delete"
+        android:layout_marginBottom="47dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnVConfirmDelete_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -24,8 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="104dp"
-        android:text="Are you sure you want to delete this team? This action cannot be undone."
+        android:fontFamily="sans-serif-black"
+        android:text="Are you sure you want to delete your TEAM NAME team? This action cannot be undone."
         android:textAlignment="center"
+        android:textColor="#FD5151"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/lvVConfirmDelete_team"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,9 +39,12 @@
         android:id="@+id/btnVConfirmDelete_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:text="Yes, Please Delete"
-        app:layout_constraintBottom_toTopOf="@+id/btnVConfirmDelete_back"
+        android:layout_marginStart="4dp"
+        android:backgroundTint="#FCCD40"
+        android:fontFamily="sans-serif-black"
+        android:text="YES, PLEASE DELETE"
+        android:textColor="#FC5151"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/btnVConfirmDelete_back"
         app:layout_constraintTop_toBottomOf="@+id/lvVConfirmDelete_team" />
 
@@ -45,10 +52,13 @@
         android:id="@+id/btnVConfirmDelete_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="75dp"
+        android:layout_marginBottom="73dp"
+        android:backgroundTint="#FBCC40"
         android:text="No, Please Don't Delete"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnVConfirmDelete_delete" />
+        app:layout_constraintTop_toBottomOf="@+id/lvVConfirmDelete_team" />
 </androidx.constraintlayout.widget.ConstraintLayout>
